# LightRayRider

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  contributing.html  genindex.html  index.html  installation.html  irradiate.py  issues.html  lightrayrider.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  ray.c  raytrace.py  readme.html  search.html  searchindex.js  setup.py  test_cone.py  test_finite.py  test_grid.py  test_sphere1.py  test_sphere2.py  test_voronoi.py
.github/workflows/: tests.yml
_modules/: index.html
_sources/: index.rst.txt  issues.rst.txt  lightrayrider.rst.txt
docs/: Makefile  conf.py  index.rst  issues.rst  modules.rst
example/: geometricnh.py  irradiate.py
lightrayrider/: __init__.py  parallel.pyx  ray.c  raytrace.pyx
test/: line.py  linetest.py  test.py  test2.py  testvoronoi.py
tests/: test_cone.py  test_finite.py  test_grid.py  test_sphere1.py  test_sphere2.py  test_voronoi.py
