[build-system]
requires = ["setuptools>=42", "wheel", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrayrider"
version = "2.0.3"
description = "Ray Tracing Monte Carlo photon propagator and column density calculator"
readme = "README.rst"
authors = [
    { name="Johannes Buchner", email="buchner.johannes@gmx.at" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy"
]

[project.urls]
Repository = "https://github.com/JohannesBuchner/LightRayRider"
Homepage = "https://github.com/JohannesBuchner/LightRayRider"

