[build-system]
requires = ["setuptools>=42", "wheel", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrayrider"
version = "2.0.6"
description = "Ray Tracing Monte Carlo photon propagator and column density calculator"
readme = "README.rst"
authors = [
    { name="Johannes Buchner", email="buchner.johannes@gmx.at" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 6 - Mature",
]
dependencies = [
    "numpy<2",
    "progressbar-latest",
    "matplotlib",
    "scipy",
]

[project.urls]
Repository = "https://github.com/JohannesBuchner/LightRayRider"
Homepage = "https://github.com/JohannesBuchner/LightRayRider"

